--- a/css/main.css
+++ b/css/main.css
@@ -5,32 +5,20 @@ html, body {  /* should be set to make % sizes work correctly */
 
 body{
   background-color: #FFFFFF;
-  /* font-family: 'Open Sans', sans-serif; */
-  /* font-family: 'Roboto Slab', sans-serif; */
-  /* font-family: 'Source Sans Pro', sans-serif; */
   font-family: 'Lato', sans-serif;
 }
 
 p {
-  color: white;
+  color: black;
   line-height: 1.4;
-  font-weight: 100;
-  font-size: calc(16px + 0.5vw); /* responive font size */
-  font-family: 'Lato', sans-serif;
 }
 
 h2 {
-  padding: 0px;
-  border: 0px;
-  margin-bottom: 0px;
-  font-size: calc(22px + 0.5vw); /* responsize font size */
-  color: white;
-  font-family: 'Lato', sans-serif;
+
 }
 
 h1 {
-  font-size: calc(75px + 0.5vw); /* responsize font size */
-  font-family: 'Lato', sans-serif;
+
 }
 
 /***** GRID *****/
@@ -55,57 +43,16 @@ h1 {
   width: 66%;
 }
 
-
-
-/* Section introduction letters */
-.section_headers {
-  mix-blend-mode: overlay; /* to blend the text into the background */
-  font-size: calc(150px + 1vw); /* scaling font (responsive) */
-  color: white;
-  text-align: center;
-  padding: 150px 0px 150px 0px;
-  margin: 0px;
-  border: 0px;
-  text-transform: uppercase;
-  /* font-family: 'Titillium Web', sans-serif; */
-  font-family: 'Lato', sans-serif;
-  font-weight: bold;
-}
-
-/* centering of images within divs */
-.centering {
-  margin-right: auto; /* to center the images horizontally and vertically within the div*/
-  margin-left: auto;
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-
-/* making text bold */
-.text-strong-highlight {
-  font-weight:  bold;
-}
-
-.section_contents {
-  height: 400px;
-  border: 0px;
-  margin: 0px;
-  padding: 0px;
-}
-
 /***** HEADER *****/
 
 header {
-  height: 100px;
+  height: 10vh;
   border: 0px;
   margin: 0px;
   padding: 0px;
-  background: url('../img/background_foto_forest.png') center center;
-  border-bottom: 3px solid #24382B ;
-  position: fixed; /* so that the nav bar is always visible */
+  /* position: fixed; /* so that the nav bar is always visible */
   width: 100%; /* to make the nav bar wisth the whole screen */
-  background-size: cover;
 }
-
 
 nav {
   float: right;
@@ -118,7 +65,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: white;
+  color: black;
   text-decoration: none; /* so that text/links doesn't have an underline */
   font-size: calc(10px + 0.5vw); /* responsive text size with min font size 15x */
   padding-left: 20px;
@@ -128,299 +75,17 @@ nav ul li a {
 }
 
 header #logo {
-  padding: 20px 0 0 10%;
   margin: 0px;
   border: 0px;
+  padding-left: 50px;
+  height: 10vh;
 }
 
 
 /***** STARTPAGE *****/
 
-#startpage {
-  background: url('../img/background_foto_forest.png') no-repeat center center fixed;
-  height: 100vh; /* vh = viewport height = 100% :) to make the section 100% window height */
-}
-
-#slogan {
-  color: white;
-  font-size: calc(20px + 4vw); /* responsive font size */
-  padding: 20vh 0px 0px 10vh; /* to let the slogan start at 25% of vertical screen height */
-  /* font-family: 'Titillium Web', sans-serif; */
-  font-family: 'Lato', sans-serif;
-  font-weight: bold ;
-  line-height: 1.5;
-}
-
-#highlight_slogen1 {
-  color: #C490D1;
-  font-size: calc(25px + 5vw); /* responsive font size */
-}
-
-#highlight_slogen2 {
-  color: #2D81AF;
-  font-size: calc(30px + 6vw); /* responsive font size */
-  padding-left: 40px;
-}
-
-#action_slogan {
-  padding-top: 35vh; /* to let the action slogan start at 35% of screen height */
-  font-size: calc(20px + 1.5vw);
-  font-family: 'Lato', sans-serif;
-}
-
-
-#startpage_button {
-  /* needed to have the transparent part of the png showing off  */
-  background-color: transparent;
-  border: 0px;
-  min-width: 100%;
-  padding-top: 20px;
-}
-
-
-#chamaeleon {
-  padding-left: 40%;
-  padding-top: 140px;
-  mix-blend-mode: normal;
-  position: absolute;
-}
-
-#chamaeleon:hover {
-  mix-blend-mode: difference  ; /* DIFFERENCE hard-light overlay*/
-}
-
-/*** STATEMENT ***/
-
-#statement_welcome {
-  font-weight: bold;
-  font-size: 2rem;
-  padding-bottom: 10px;
-}
-
-
-#statement h2 {
-  height: auto;
-  background-color: #C490D1;
-  color: white;
-  border: 0px;
-  margin: 0px;
-  padding: 100px 200px 100px 200px;
-  font-family: 'Lato' ;
-  font-weight: 100;
-  line-height: 1.5;
-  font-size: 1.25rem;
-  text-align: center;
-}
-
-#statement:hover h2 { /* color background differently */
-  background-color: #2C81AE;
-}
-
-/***** WORK *****/
-#work {
-  background: url('../img/work_water_from_space_background.png') no-repeat center top fixed;
-}
-
-#work_projects { /* project content items (screenshots of portfolio projects done) */
-  background: #2D81AF;
-  padding: 5% 10% 5% 10%; /* to assure that there are no spaces between other page sections*/
-  height: auto; /* the height of the project section is defined by the elements in the grid  */
-  clear: both;
-}
-
-/* responsive grid to host the project icons and screens */
-/* grid can have units like defines px or fr (fractions - to make the grid responsive) */
-.container {
-  text-align: center; /* to center the grid elements*/
-  display: grid;
-  grid-gap: 30px; /* separate the grid items by 30px */
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr) ); /* creates a grid with 4 columns and two rows */
-  grid-template-rows: repeat(auto-fit, minmax(100px, 1fr) );
-}
-
-/* formatting work project logos and screen */
-/* creating hover over effect with the project screen */
-.work-project-logo {
-  mix-blend-mode: overlay;
-}
-
-.grid_content_fields {
-  position: relative; /* thats needed to assure that the content of the grid is still within the grid field */
-}
-
-.project_icon {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.overlay {
-  /* thats the screen overlayed over the project icon */
-  position: absolute; /* thats needed to put the overlay over the background image within the grid */
-  top: 0px;
-  bottom: 0px;
-  right: 0px;
-  left: 0px;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: 0.5s ease; /* to fade in the screens */
-  background-color: transparent;
-  vertical-align: middle;
-}
-
-.grid_content_fields:hover .overlay {
-   opacity: 1; /* when hovering over the grid field the overlay image is shown */
-}
-
-
-/* formatting caption */
-.work-project-description {
-  color: white;
-  font-size: calc(20px + 0.5vw); /* allows responsive text size */
-  padding-top: 30px; /* get more space between caption and logo */
-  font-family: 'Lato', sans-serif;
-  font-weight: 100;
-}
-
-
-
-
-/***** ABOUT *****/
-#about {
-  background: url('../img/background_services_water_from_space.png') center center fixed;
-}
-
-
-#about_text {
-  height: 300px;
-  background: #C490D1;
-  margin: auto; /* to center the images horizontally and vertically within the div*/
-  padding: 10% 20% 10% 20%;
-  display: block;
-  text-align: center; /* makes a blocksatz */
-}
-
-#about_text p {
-  font-family: 'Lato',sans-serif ;
-  font-weight: 100;
-  line-height: 1.5;
-}
-
-#quote {
-  font-size: calc(17px + 0.5vw);
-  font-family: 'Lato',sans-serif ;
-  font-weight: 100;
-}
-
-.increase_font_size {
-  font-size: calc(25px + 0.5vw);
-  font-family: 'Lato',sans-serif ;
-  font-weight: 100;
-}
-
-
-
-/***** SERVICES *****/
-#services {
-  background: url('../img/background_contact.png') center top fixed;
-}
-
-#services-content {
-  background: #2D81AF;
-  text-align: center;
-  padding: 100px 0 100px 0;
-  color: white;
-  height: 600px;
-}
-
-
-
-/* #services-content p {
-  padding: 0px;
-  border: 0px;
-  margin-bottom: 0px;
-  font-size: 1.5vw;
-} */
-
-
-
-#services-content img {
-  width: 70px;
-  margin: 0px;
-  padding: 0px;
-  border: 0px;
-}
-
-
-/* allows reducing the space between service name and description */
-.service_description_group {
-  line-height: 1.5;
-}
-
-.service_description_group h2, p {
-  margin-bottom: 0px;
-  margin-top: 0px;
-}
-
-.service_description_group p {
-  padding-bottom: 50px; /* to get a space between the logo elements */
-}
-
-/***** CONTACT *****/
-
-#contact {
-  background: url('../img/background_about_water_from_space.png') center center fixed;
-}
-
-#contact-content {
-  background: #189A83;
-  text-align: center;
-  color: white;
-  padding: 100px;
-  font-size: 2vw;
-  line-height: 1.2;
-}
-
-
-
-/***** FOOTER *****/
-
-#copyright {
-  text-align: center;
-  padding-top: 20px;
-  height: 300px;
-  background: url('../img/background_lastpic.png') center center fixed;
-  color: white;
-}
-
-footer p {
-    font-size: calc(10px + 0.5vw); /* calculation to make a minimum font size (10px) and scaling by 0.5vw when changing window size */
-}
-
-#social_media_links img {
-    width: 3%;
-    min-width: 30px; /* to assure that the icon sizes doesn't shrink to much when reducing window size*/
-}
-
-#social_media_links {
-  padding: 0px;
-  margin: 0px;
-  border: 0px;
-}
-
-#social_media_links ul {
-  margin: 0px;
-  padding: 10px 0px 0px 10px;
-  border: 0px;
-}
-
-#social_media_links ul li {
-  list-style: none;
-  display: inline;
-}
-
-/* formatting social media link styles */
-#social_media_links ul li a {
-  text-decoration: none; /* so that text/links doesn't have an underline */
+#landingpage {
+  background: url('../img/landingpage_background.png') center center fixed;
+  background-size: cover;
+  height: 90vh; /* vh = viewport height = 100% :) to make the section 100% window height // together with navbar (10vh) and landingpage ociture (90vh)= 100vh*/
 }
