--- a/css/main.css
+++ b/css/main.css
@@ -100,12 +100,11 @@ textarea {
 
 /*----------------- BASE STYLES -------------------*/
 html {
-    /*font-size: 16px; /* setting base font size for ems */
     font-size: calc(0.7em + 1vw); /* setting base font size for ems and make them responsively growing with screen size */
 }
 
 body{
-  background-color: #FFFFFF;
+  background-color: #F2F2F2;
   font-size: 1em;
 }
 
@@ -137,6 +136,9 @@ p {
   font-family: 'Lato', sans-serif;
 }
 
+a {
+  font-family: 'Open Sans', sans-serif;
+}
 
 img {
   width: 100%;
@@ -161,6 +163,106 @@ figure {
 /*-----------------------------------------------------*/
 /* ------- HEADER ----------------------------- */
 /*-----------------------------------------------------*/
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+header .content-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-flow: row wrap;
+  margin: 0;
+  padding: 0;
+}
+
+#logo { /* set size of page logo */
+  width: 30%;
+}
+
+.header-divider {
+  width: 100%;
+  height: 1px;
+}
+
+
+/*------- styling langauge selectors -------------*/
+.langauge-selector {
+  width: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+
+
+.langauge-selector ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: row nowrap;
+  margin: 0;
+  padding: 0;
+}
+
+.langauge-selector ul li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: row nowrap;
+  margin: 0;
+  padding: 0;
+}
+
+.langauge-selector ul li a {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+}
+
+.lang-sel-flag {
+  width: 50%;
+  min-width: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+/*----- nav bar styling ---------*/
+
+header nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  flex-flow: row nowrap;
+
+}
+
+header nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-flow: row wrap;
+  padding: 0;
+  margin: 0;
+}
+
+header nav ul li {
+  list-style: none;
+}
+
+header nav ul li a {
+  text-decoration: none;
+  color: #253449;
+  padding: 3px;
+}
+
 
 
 
