--- a/css/main.css
+++ b/css/main.css
@@ -124,8 +124,9 @@ h2 {
   border: 0px;
   margin: 0px;
   font-size: 1.2em; /* responsize font size */
-  color: white;
-  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  color: #EAEFEE;
+  font-family: 'Open Sans', sans-serif;
 }
 
 p {
@@ -154,6 +155,7 @@ figure {
   align-items: center;
   justify-content: center;
   width: 90%;
+  padding: 50px 0;
 }
 
 
@@ -263,6 +265,29 @@ header nav ul li a {
   padding: 3px;
 }
 
+/*----------------------------------------*/
+/*--------------HERO IMAGE ---------------*/
+/*----------------------------------------*/
+
+.hero-image {
+  background: url('../img/landingpage-background.jpg') center center no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+}
+
+.hero-image .content-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-flow: row nowrap;
+}
+
+.hero-image figure {
+  width: 40%;
+}
 
 
 
