--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,12 @@ figure {
   padding: 50px 0;
 }
 
-
+hr {
+  width: 10%;
+  margin: 5px 0;
+  border: 1px solid white;
+  opacity: 0.4;
+}
 
 
 
@@ -174,6 +179,7 @@ header {
   align-items: center;
   justify-content: center;
   flex-flow: row wrap;
+  padding-bottom: 10px;
 }
 
 header .content-wrapper {
