--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,7 @@ textarea {
 
 /*----------------- BASE STYLES -------------------*/
 html {
-    font-size: calc(0.7em + 1vw); /* setting base font size for ems and make them responsively growing with screen size */
+    font-size: calc(0.7em + 0.8vw); /* setting base font size for ems and make them responsively growing with screen size */
 }
 
 body{
@@ -133,7 +133,7 @@ h2 {
 }
 
 p {
-  color: white;
+  color: #EAEFEE;
   line-height: 1.5;
   font-weight: 100;
   font-size: 1em; /* responive font size */
@@ -163,11 +163,34 @@ figure {
 
 hr {
   width: 10%;
-  margin: 5px 0;
-  border: 1px solid white;
+  margin: 20px 0;
+  border: 1px solid #EAEFEE;
   opacity: 0.4;
+  box-shadow: 1px 1px black;
 }
 
+/*-- button styling --*/
+.btn {
+  width: 25vw;
+  height: 4.5vh; /* 54px height on desktop -> cs. 4.5% of screen height */
+  color: #EAEFEE;
+  border: none;
+  text-align: center;
+  text-transform: capitalize;
+  font-weight: 200;
+  font-family: 'Open Sans', sans-serif;
+  letter-spacing: 1px;
+  font-size: 1em;
+  border-radius: 4px; /* to make round corners */
+}
+
+.btn-first-level {
+  background-color: #3FB5AD;
+}
+
+.btn-sec-level {
+  background-color: #B03E56;
+}
 
 
 /*-----------------------------------------------------*/
@@ -180,12 +203,13 @@ header {
   justify-content: center;
   flex-flow: row wrap;
   padding-bottom: 10px;
+
 }
 
 header .content-wrapper {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   flex-flow: row wrap;
   margin: 0;
   padding: 0;
@@ -281,6 +305,8 @@ header nav ul li a {
 .hero-image {
   background: url('../img/landingpage-background.jpg') center center no-repeat;
   background-size: cover;
+  height: 90vh;
+  /*opacity: 0.7;*/
   display: flex;
   align-items: center;
   justify-content: center;
@@ -292,12 +318,30 @@ header nav ul li a {
   align-items: center;
   justify-content: space-around;
   flex-flow: row nowrap;
+  height: 50vh;
 }
 
 .hero-image figure {
   width: 40%;
 }
 
+.hero-image h1 {
+  font-weight: 600;
+  text-shadow: 1px 1px black;
+
+}
+/* styling buttons on hero image  */
+.user-engagement {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: row nowrap;
+}
+
+.user-engagement button {
+  margin: 0 7vw;
+}
 
 
 /* ==========================================================================
