--- a/css/main.css
+++ b/css/main.css
@@ -231,7 +231,7 @@ header .content-wrapper {
   width: 10%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   padding: 0;
   margin: 0;
 }
@@ -274,8 +274,8 @@ header .content-wrapper {
 header nav {
   display: flex;
   align-items: center;
-  justify-content: center;
-  width: 80%;
+  justify-content: flex-end;
+  width: 60%;
   flex-flow: row nowrap;
 
 }
@@ -296,7 +296,7 @@ header nav ul li {
 header nav ul li a {
   text-decoration: none;
   color: #253449;
-  padding: 3px;
+  padding: 5px;
 }
 
 /*----------------------------------------*/
