--- a/css/main.css
+++ b/css/main.css
@@ -172,8 +172,6 @@ hr {
 /*-- button styling --*/
 .btn {
   width: 20vw;
-  /*max-width: 100px;*/
-  height: 4.5vh; /* 54px height on desktop -> cs. 4.5% of screen height */
   color: #EAEFEE;
   border: none;
   text-align: center;
@@ -183,6 +181,7 @@ hr {
   letter-spacing: 1px;
   font-size: 1em;
   border-radius: 4px; /* to make round corners */
+  padding: 0.7em 0em;
 }
 
 .btn-first-level {
