setting header for tablet and desktop

--- a/css/main.css
+++ b/css/main.css
@@ -203,7 +203,6 @@ header {
   justify-content: center;
   flex-flow: row wrap;
   padding-bottom: 10px;
-
 }
 
 header .content-wrapper {
@@ -274,9 +273,8 @@ header nav {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  width: 60%;
+  width: 80%;
   flex-flow: row nowrap;
-
 }
 
 header nav ul {
@@ -432,51 +430,38 @@ header nav ul li a {
 
 @media only screen and (min-width: 768px) {
   /* -------- tablet and desktop styles here   ----------*/
-      header .content-wrapper-header {
+      a {
+        font-size: 1.2em;
+      }
+
+      header .content-wrapper {
         flex-flow: row nowrap;
-        padding: 20px 0;
       }
 
-      header figure {
-        width: 15%; /* sets size of figure / logo */
-        padding-top: 0;
+      #logo { /* set size of page logo */
+        width: 11vw;
       }
 
-      header nav ul {
-        flex-flow: row nowrap; /* nav bar items are placed next to each other  */
+      header nav {
+        flex-basis: 60%;
       }
 
-      header nav ul li {
-        display: flex;
-        align-items: center ;
-        justify-content: space-around;
-        flex-flow: row nowrap;
-        padding: 0 0.3em 0 0.3em; /* spreads the nav bar items */
+      .header-divider {
+        flex-basis: 20%;
       }
 
-      .start-section {
-        background: url('../img/background-foto-forest.jpg') center center repeat fixed;
+      header nav ul li a {
+        padding: 10px;
       }
 
-      #work-section {
-        background: url('../img/work-water-from-space-background.jpg') center center no-repeat fixed;
+      .lang-sel-flag {
+        width: 2.3vw; /* width in percentage of the screen */
+        /*min-width: 2em; /* size of language flags */
       }
 
-      #about-section {
-        background: url('../img/background-services-water-from-space.jpg') center center no-repeat fixed;
-      }
 
-      #services-section {
-        background: url('../img/background-contact.jpg') center top no-repeat fixed;
-      }
 
-      #contact-section {
-        background: url('../img/background-about-water-from-space.jpg') center center no-repeat fixed;
-      }
 
-      footer {
-         background: url('../img/background_lastpic.jpg') center center no-repeat fixed;
-      }
 }
 
 
