--- a/css/main.css
+++ b/css/main.css
@@ -470,6 +470,13 @@ header nav ul li a {
   width: 15vw;
 }
 
+.slider-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: row nowrap;
+}
+
 .testemonie-text { /* background box with testionial text */
   background-color: #B03E56;
   border-radius: 30px;
@@ -477,6 +484,24 @@ header nav ul li a {
   margin: 20px 0;
   padding: 10px;
   text-align: center;
+}
+
+.triangle-right {
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-left: 20px solid #B03E56;
+  border-bottom: 10px solid transparent;
+  margin-left: 10px;
+}
+
+.triangle-left {
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-right: 20px solid #B03E56;
+  border-bottom: 10px solid transparent;
+  margin-right: 10px;
 }
 
 
