--- a/css/main.css
+++ b/css/main.css
@@ -178,7 +178,7 @@ hr {
 
 /*-- button styling --*/
 .btn {
-  width: 20vw;
+  /*width: 20vw;*/
   color: #EAEFEE;
   border: none;
   text-align: center;
@@ -186,9 +186,10 @@ hr {
   font-weight: 200;
   font-family: 'Open Sans', sans-serif;
   letter-spacing: 1px;
-  font-size: 1em;
+  font-size: 0.9em;
   border-radius: 4px; /* to make round corners */
-  padding: 0.7em 0em;
+  padding: 0.7em 1.3em;
+  margin: 0.5em;
 }
 
 .btn-first-level {
@@ -199,6 +200,10 @@ hr {
   background-color: #B03E56;
 }
 
+.btn-third-level {
+  background-color: #EEA231;
+  /*width: 30vw;*/
+}
 
 /*-----------------------------------------------------*/
 /* ------- HEADER ----------------------------- */
@@ -525,6 +530,13 @@ header nav ul li a {
   padding-bottom: 20px;
 }
 
+.list-wrapper { /* lets lists appear next to each other for desktop*/
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
 .hard-facts-item figure {
   mix-blend-mode: darken;
   width: 15%;
@@ -551,12 +563,51 @@ header nav ul li a {
     justify-content: flex-start;
 }
 
+.hard-facts-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: row nowrap;
+    width: 100%;
+}
+
 .hard-facts-item p {
   margin: 0;
   padding: 0;
+
 }
 
+.soft-facts-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: row nowrap;
+    width: 100%;
+}
 
+.soft-facts-item figure {
+  mix-blend-mode: darken;
+  width: 15%;
+  margin: 10px;
+}
+
+.soft-facts {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+}
+
+.soft-facts-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+.soft-facts-item p {
+  margin: 0;
+  padding: 0;
+}
 /*------ FOOTER -----------*/
 footer {
   background-color: #EEA231;
